<resources>
    <string name="app_name">Spotify Streamer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_top_tracks">Top 10 Tracks</string>
    <string name="searchview_hint">Type artist name</string>
    <string name="refine_search">No artist found. Please refine search</string>
    <string name="description_artist_thumbnail">Artist thumbnail</string>
    <string name="description_album_thumbnail">Album thumbnail</string>
    <string name="network_unavailable">Network connection not available</string>
    <string name="connection_error">Connection error. Please try again</string>
    <string name="no_results">No results available</string>
    <string name="title_activity_play_track">Spotify Streamer</string>
    <string name="album_artwork">Album artwork</string>
    <string name="previous">Previous</string>
    <string name="play_pause">play/pause</string>
    <string name="next">next</string>
    <string name="action_share">Share</string>
    <string name="title_activity_settings">Settings</string>

    <!--PREFERENCES-->
    <string name="pref_country_label">Country</string>
    <string name="pref_country_key" translatable="false">country</string>
    <string name="pref_country_default" translatable="false">US</string>


    <string name="pref_country_label_china">China</string>
    <string name="pref_country_label_germany">Germany</string>
    <string name="pref_country_label_italy">Italy</string>
    <string name="pref_country_label_japan">Japan</string>
    <string name="pref_country_label_spain">Spain</string>
    <string name="pref_country_label_united_kingdom">United Kingdom</string>
    <string name="pref_country_label_united_states_america">United States of America</string>

    <string name="pref_country_china" translatable="false">CN</string>
    <string name="pref_country_germany" translatable="false">DE</string>
    <string name="pref_country_italy" translatable="false">IT</string>
    <string name="pref_country_japan" translatable="false">JP</string>
    <string name="pref_country_spain" translatable="false">ES</string>
    <string name="pref_country_united_kingdom" translatable="false">GB</string>
    <string name="pref_country_united_states_america" translatable="false">US</string>

    <string name="pref_controls_label">Controls on notification</string>
    <string name="pref_controls_key" translatable="false">controls</string>
    <string name="pref_controls_summary_on_label">Enabled</string>
    <string name="pref_controls_summary_off_label">Disabled</string>
    <string name="now_playing">Now Playing</string>

</resources>
