<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:title="@string/pref_country_label"
        android:key="@string/pref_country_key"
        android:defaultValue="@string/pref_country_default"
        android:entryValues="@array/pref_country_values"
        android:entries="@array/pref_country_options"/>

    <CheckBoxPreference
        android:title="@string/pref_controls_label"
        android:key="@string/pref_controls_key"
        android:defaultValue="true"
        android:summaryOn="@string/pref_controls_summary_on_label"
        android:summaryOff="@string/pref_controls_summary_off_label"/>
</PreferenceScreen>